Fix compile with BoringSSL

--- a/plugins/auth/CMakeLists.txt
+++ b/plugins/auth/CMakeLists.txt
@@ -69,10 +69,12 @@ IF(CRYPTO_PLUGIN)
                 INCLUDES ${REF10_DIR}
                 LIBRARIES ${CRYPT_LIBS}
                 COMPILE_OPTIONS -DMYSQL_CLIENT=1)
-  SET_PROPERTY(TARGET client_ed25519 PROPERTY C_STANDARD 11)
+  IF(TARGET client_ed25519)
+    SET_PROPERTY(TARGET client_ed25519 PROPERTY C_STANDARD 11)
 
-  IF(HAVE_C_THREAD_LOCAL)
-    TARGET_COMPILE_DEFINITIONS(client_ed25519 PRIVATE -DHAVE_THREAD_LOCAL)
+    IF(HAVE_C_THREAD_LOCAL)
+      TARGET_COMPILE_DEFINITIONS(client_ed25519 PRIVATE -DHAVE_THREAD_LOCAL)
+    ENDIF()
   ENDIF()
 
   IF(MSVC)
