--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -247,7 +247,9 @@ INCLUDE(${CC_SOURCE_DIR}/cmake/check_types.cmake)
 IF(UNIX)
   SEARCH_LIBRARY(LIBM floor m)
   SEARCH_LIBRARY(LIBPTHREAD pthread_getspecific "pthread;pthreads")
-  SEARCH_LIBRARY(LIBNSL gethostbyname_r "nsl_r;nsl")
+  if (NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+    SEARCH_LIBRARY(LIBNSL gethostbyname_r "nsl_r;nsl")
+  endif()
   SEARCH_LIBRARY(LIBSOCKET setsockopt socket)
   FIND_PACKAGE(Threads)
   SET(CMAKE_REQUIRED_LIBRARIES ${CMAKE_REQUIRED_LIBRARIES} ${LIBNSL} ${LIBBIND} ${LIBICONV} ${ZLIB_LIBRARY} 
