--- a/plugins/auth/CMakeLists.txt
+++ b/plugins/auth/CMakeLists.txt
@@ -99,7 +99,7 @@ IF(NOT WIN32)
   INCLUDE(${CC_SOURCE_DIR}/cmake/FindGSSAPI.cmake)
   IF(GSSAPI_FOUND)
     SET(GSSAPI_SOURCES ${AUTH_DIR}/auth_gssapi_client.c ${AUTH_DIR}/gssapi_client.c ${AUTH_DIR}/gssapi_errmsg.c)
-    IF (CMAKE_VERSION VERSION_GREATER 3.18)
+    IF (CMAKE_VERSION VERSION_GREATER 3.18 AND NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
       INCLUDE(CheckLinkerFlag)
       CHECK_LINKER_FLAG(C -Wl,--as-needed have__Wl___as_needed)
     ENDIF()
